[project]
name = "drheaderplus-mcp"
version = "0.1.0"
description = "MCP server for DrHeaderPlus security header auditing"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Dmitry Kozlov" }]
keywords = ["security", "headers", "mcp", "llm", "owasp", "csp", "hsts"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "drheaderplus>=3.0.3",
    "mcp[cli]>=1.26",
]

[project.scripts]
drheaderplus-mcp = "drheaderplus_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.0.0", "pytest-asyncio>=1.0.0", "responses>=0.25", "anyio>=4.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
